// ---------------------------------------------------
// phantom-lang
// https://github.com/notcl4y14/phantom-lang
// ---------------------------------------------------

// ---------------------------------------------------
// UNDER CONSTRUCTION VERSIONS
// ---------------------------------------------------

// 3/12/2024
- Created interpreter.py
- Created runtime_value.py
- Added evaluation types to the interpreter
	+ Program
	+ NumericLiteral: int | float

// 3/8/2024
- The debug output now has closures
- Added more values to token types
	+ Operator
		* +=
		* -=
		* *=
		* /=
		* %=
		* ^=
		* <=
		* >=
		* ==
		* !=
	+ Symbol
		* &&
		* ||
- Added error
- Added position

// 3/7/2024 - 3/8/2024
- Added BinaryExpr node
-----------
- Created parser.py
- Added nodes
	+ Program
	+ NumericLiteral
	+ StringLiteral
	+ Literal

// 3/7/2024
- The language now runs the files
- Created "util" folder
	+ file.py
- Created "tests" folder
	+ test.pha
- Added CLI
	+ --lexer: Shows the lexer output (tokens)
-----------
- Added more token types
	+ Closure
	+ Symbol
	+ Int | Float
	+ String
	+ Keyword
	+ Literal
	+ Identifier
- Added more token values to the "Operator" token type
	+ "=", "<", ">"
-----------
- Initial release
- Created main.py
- Created "source" folder
	+ lexer.py
	+ token.py
- Added "Operator" token type