@@ -1,4 +1,4 @@
-from source.runtime_value import *
+from source.runtime_values import *
 from source.error import *
 
 class Interpreter:
@@ -32,7 +32,29 @@ class Interpreter:
 	
 	def eval_NumericLiteral(self, literal):
 		value_type = type(literal.value).__name__
-		return RuntimeValue(value_type, literal.value)
+		return NumberValue(value_type, literal.value)
+	
+	def eval_StringLiteral(self, literal):
+		return StringValue(literal.value)
+	
+	def eval_Literal(self, literal):
+		if literal.value in ["true", "false"]:
+			return BooleanValue(literal.value)
+		
+		return RuntimeValue(literal.value, None)
+	
+	def eval_BinaryExpr(self, expr):
+		left = self.eval(expr.left)
+		right = self.eval(expr.right)
+		op = expr.op
+
+		result = left.Operator(op.value, right)
+
+		if result == None:
+			return Error(f"Cannot do {left.type} {op.value} {right.type}", expr.pos)
+			# return result
+		
+		return result
 
 def interpret(ast):
 	return Interpreter().eval(ast)
